syntax = "proto3";

package zhark0vv.grpc.education.api;
option go_package = "zhark0vv/grpc/education/api;educationapi";

import "google/api/annotations.proto";

service EducationAPI {
  // Sends a greeting
  rpc Greet(GreetRequest) returns (GreetResponse) {
    option (google.api.http) = {
      post: "/v1/greet"
      body: "*"
    };
  };
}

message GreetRequest {
  // The name of the person to greet.
  string name = 1;
}

message Cluster {
  string name = 1;
  string server = 2;
  string certificate_authority_data = 3;
}

message GreetResponse {
  repeated string message = 1;
  Cluster cluster = 2;
}
